--- a/k8s/admin-depl.yml
+++ b/k8s/admin-depl.yml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: admin-svc
-        image: arigatory/moviepoisk-admin
+        image: kennethreitz/httpbin
         ports:
         - containerPort: 8000
         env:
