--- a/k8s/admin-depl.yml
+++ b/k8s/admin-depl.yml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: admin-svc
-        image: kennethreitz/httpbin
+        image: containous/whoami
 ---
 apiVersion: v1
 kind: Service
