--- a/dev/.env.sample
+++ b/dev/.env.sample
@@ -21,7 +21,7 @@ MINIO_SECRET_KEY=J4W5FvuO57ZK8gGHVdzYdtad8EqEjVx6lEuOXsXp
 # Admin
 
 DB_HOST=db
-DB_HOST=127.0.0.1
+#DB_HOST=127.0.0.1
 DB_NAME=devdb
 DB_USER=devuser
 DB_PASSWORD=changeme
