--- a/dev/.env.sample
+++ b/dev/.env.sample
@@ -52,3 +52,13 @@ ELASTIC_PORT=9200
 PROJECT_NAME=movies_storage
 
 # Search
+
+# Auth DB
+
+AUTH_DB_NAME=devdb
+AUTH_DB_USER=devuser
+AUTH_DB_PASSWORD=changeme
+AUTH_DB_HOST=auth-db
+AUTH_DB_PORT=5432
+
+JWT_SECRET_KEY=iamsecret
