--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -1,5 +1,15 @@
 version: '3'
+
 services:
+  postgres:
+    image: postgres:16
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_PASSWORD=password
+    ports:
+      - 5432:5432
+
   # FileAPI
   storage:
     build:
@@ -33,66 +43,6 @@ services:
       - minio_storage:/data
     command: server /data --console-address ":9001"
 
-  storage-db:
-    image: postgres:13-alpine
-    volumes:
-      - storage-db-data:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_DB=${DB_NAME}
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-    ports:
-      - 5434:5432
-   
-  # Admin
-  admin:
-    build:
-      context: ../../admin-service
-      dockerfile: Dockerfile
-      args:
-        - DEV=true
-    ports:
-      - "8001:8001"
-    volumes:
-      - static-data:/vol/web
-    command: >
-      sh -c "python manage.py wait_for_db &&
-             python manage.py migrate &&
-             python load_data.py &&
-             python manage.py runserver 0.0.0.0:8001"
-    environment:
-      - DB_HOST=${DB_HOST}
-      - DB_NAME=${DB_NAME}
-      - DB_USER=${DB_USER}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - SECRET_KEY=${SECRET_KEY}
-      - ALLOWED_HOSTS=${ALLOWED_HOSTS}
-    depends_on:
-      - db
-  
-  db:
-    image: postgres:13-alpine
-    volumes:
-      - movies-db-data:/var/lib/postgresql/data
-      - ../../admin-service/docker_postgres_init.sql:/docker-entrypoint-initdb.d/docker_postgres_init.sql
-    environment:
-      - POSTGRES_DB=${DB_NAME}
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-    ports:
-      - 5433:5432
-
-  nginx:
-    build:
-      context: ../../admin-service/nginx
-    restart: always
-    depends_on:
-      - admin
-    ports:
-      - 8080:8001
-    volumes:
-      - static-data:/vol/static
-
   # Etl
   etl:
     build:
@@ -100,7 +50,7 @@ services:
       dockerfile: Dockerfile
     restart: always
     depends_on:
-      - db
+      - postgres
       - elasticsearch
     environment:
       - DATABASE_NAME=${DATABASE_NAME}
@@ -169,10 +119,10 @@ services:
       - AUTH_DB_PORT=${DB_PORT}
   
 volumes:
+  postgres-data:
   # storage
   storage-db-data:
   # admin
-  movies-db-data:
   static-data:
   # search
   elasticsearch_data:
