--- a/k8s/admin-depl.yml
+++ b/k8s/admin-depl.yml
@@ -19,14 +19,14 @@ spec:
           - name: DB_NAME
             value: movies_database
           - name: DB_USER
-            value: postgres
+            value: doadmin
           - name: DB_PASSWORD
             valueFrom:
               secretKeyRef:
                 name: admin-secret
                 key: postgresPw
           - name: DB_HOST
-            value: localhost
+            value: postgresql-do-user-16123669-0.c.db.ondigitalocean.com
           - name: SECRET_KEY
             value: 'django-very-secure-&k7sh3ku#(m_7@0=!57d19@e94=d0j1cpba=@n=f--is9p0#r5'
           - name: DEBUG
@@ -34,7 +34,7 @@ spec:
           - name: ALLOWED_HOSTS
             value: '127.0.0.1 0.0.0.0 moviepoisk.ru'
           - name: DB_PORT
-            value: '5432'
+            value: '25060'
 ---
 apiVersion: v1
 kind: Service
