--- a/k8s/auth-depl.yml
+++ b/k8s/auth-depl.yml
@@ -1,51 +1,47 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: admin-svc
+  name: auth-svc
 spec:
   selector:
     matchLabels:
-      app: admin-svc
+      app: auth-svc
   template:
     metadata:
       labels:
-        app: admin-svc
+        app: auth-svc
     spec:
       containers:
-        - name: admin-svc
-          image: arigatory/moviepoisk-admin
+        - name: auth-svc
+          image: arigatory/moviepoisk-auth
           imagePullPolicy: Always
           env:
             - name: DB_NAME
-              value: movies_database
+              value: moviepoisk_auth
             - name: DB_USER
               value: doadmin
             - name: DB_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: admin-secret
+                  name: auth-secret
                   key: postgresPw
             - name: DB_HOST
               value: postgresql-do-user-16123669-0.c.db.ondigitalocean.com
-            - name: SECRET_KEY
-              value: "django-very-secure-&k7sh3ku#(m_7@0=!57d19@e94=d0j1cpba=@n=f--is9p0#r5"
-            - name: DEBUG
-              value: "True"
-            - name: ALLOWED_HOSTS
-              value: "127.0.0.1 0.0.0.0 admin.moviepoisk.ru "
             - name: DB_PORT
               value: "25060"
+            - name: JWT_SECRET_KEY
+              value: iamsecret
           ports:
             - containerPort: 8000
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: admin-clusterip
+  name: auth-clusterip
 spec:
   type: ClusterIP
   selector:
-    app: admin-svc
+    app: auth-svc
   ports:
     - port: 8000
       targetPort: 8000
